# mykeenetic

./: .pre-commit-config.yaml  README.md  keenetic.py  pyproject.toml
.github/workflows/: publish.yaml
keenetic/: __init__.py
mykeenetic/: __init__.py  models.py  rci.py
tests/: __init__.py  test_keenetic.py  test_keenetic_objects.py  test_models.py  test_rci.py
