[project]
name = "mykeenetic"
version = "0.1.0"
description = "Python client for Keenetic RCI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Ilia Lazarev", email = "kephircheek@gmail.com"}
]
keywords = ["keenetic", "rci", "api"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kephircheek/mykeenetic"

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.2"]
dev = [
    "python-dotenv>=1.2",
    "pre-commit>=3.0",
]
ci = ["toml==0.10.2"]
